[gd_scene load_steps=6 format=2]

[ext_resource path="res://special_scenes/gameover_screen/GameOverScene.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://local_multiplayer/Character.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/theme/utilities/fonts/uroob.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]

resource_name = "transition"

[node name="GameOverScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
mouse_default_cursor_shape = 10
script = ExtResource( 1 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/transition = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.572549 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="Overlays" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1030.0
margin_top = 520.0
margin_right = 1252.0
margin_bottom = 699.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="Rematch" type="Button" parent="VBoxContainer"]
margin_right = 222.0
margin_bottom = 57.0
theme = ExtResource( 2 )
text = "Rematch"

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 222.0
margin_bottom = 118.0
theme = ExtResource( 2 )
text = "Back to menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 222.0
margin_bottom = 179.0
theme = ExtResource( 2 )
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -260.0
margin_right = -46.0
margin_bottom = 140.0
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1194.0
margin_bottom = 400.0
alignment = 1

[node name="winner" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 200.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 0 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 204.0
margin_top = 149.0
margin_right = 1194.0
margin_bottom = 250.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Someone WON!"
align = 1
autowrap = true

[connection signal="pressed" from="VBoxContainer/Rematch" to="." method="_on_Rematch_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
